[package]
name = "mbtools"
version = "0.1.0"
authors = ["Jared Simpson <jared.simpson@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.0"
rust-htslib = { version = "*", default-features = false }
